--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,3 +1,19 @@
 .loginForm {
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 300px;
+  margin-top: 50px;
+  padding: 20px;
+  background-color: #ddd;
+}
+.title {
+  margin-top: 40px;
+  text-align: center;
+}
+.backBtn {
+  margin-top: 20px;
+}
+.inp {
+  margin-top: 10px;
 }
