link to reg in log

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,5 +2,5 @@
   padding: 20px;
   display: flex;
   justify-content: space-between;
-  background-color: rgb(50, 166, 0);
+  background-color: var(--green);
 }
