--- a/src/pages/Notes/Notes.module.css
+++ b/src/pages/Notes/Notes.module.css
@@ -10,6 +10,7 @@
   align-items: flex-start;
   margin: 5px;
   padding: 10px;
+  min-height: 150px;
   width: 150px;
   background-color: #ddd;
   border-radius: 4px;
